--- a/step2library/build.gradle
+++ b/step2library/build.gradle
@@ -1,23 +1,20 @@
-apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25"
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.jmlb0003.jokes.gradlejokesproject"
-        minSdkVersion 18
+        minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -25,18 +22,13 @@ android {
 }
 
 dependencies {
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':step2library')
-    compile project(':jokelib')
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
-
-    testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.2.21'
 }
