--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':step2library')
     compile project(':jokelib')
+    compile project(path: ':backend', configuration: 'android-endpoints')
 
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.google.android.gms:play-services-ads:9.8.0'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
 
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
