--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        free {
+            applicationId "com.jmlb0003.jokes.gradlejokesproject.free"
+        }
+        paid {
+            applicationId "com.jmlb0003.jokes.gradlejokesproject.paid"
+        }
+    }
     return void
 }
 
@@ -33,9 +42,10 @@ dependencies {
     compile project(path: ':backend', configuration: 'android-endpoints')
 
     compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
+
+    freeCompile 'com.google.android.gms:play-services-ads:10.0.0'
 
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
