--- a/jokelib/build.gradle
+++ b/jokelib/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'java'
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+}
+
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_1_7
+    targetCompatibility = JavaVersion.VERSION_1_7
 }
