--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.0'
 
     freeCompile 'com.google.android.gms:play-services-ads:10.0.0'
 
@@ -52,3 +53,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
+
+apply plugin: 'com.google.gms.google-services'
