--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,19 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+task runAppEngine(dependsOn: ":backend:appengineRun") {
+    project(":backend").afterEvaluate {
+        backend -> backend.extensions.appengine.daemon = true
+    }
+
+    doLast {
+        println "Server was started"
+    }
+}
+
+task testAllWithGCE() {
+    mustRunAfter "runAppEngine"
+    dependsOn = ["runAppEngine", ":app:connectedAndroidTest"]
+    finalizedBy ":backend:appengineStop"
+}
